--- a/ass2/Makefile
+++ b/ass2/Makefile
@@ -6,14 +6,17 @@ all: server client
 server: server.o
 	$(CC) $(CFLAGS) -o server server.o
 
-client: client.o
-	$(CC) $(CFLAGS) -o client client.o
+client: client.o board.o
+	$(CC) $(CFLAGS) -o client client.o board.o
 
 server.o: server.c
 	$(CC) $(CFLAGS) -c server.c
 
-client.o: client.c
+client.o: client.c board.h
 	$(CC) $(CFLAGS) -c client.c
+
+board.o: board.c board.h
+	$(CC) $(CFLAGS) -c board.c
 
 clean:
 	rm -f server client *.o
