refactor common parts

--- a/ass2/Makefile
+++ b/ass2/Makefile
@@ -2,6 +2,9 @@ CLIENT = client
 SERVER = server
 TARGET = $(CLIENT) $(SERVER)
 
+SRCS_COMMON = \
+	common.c \
+
 SRCS_CLIENT = \
 	client.c \
 	board.c \
@@ -9,10 +12,11 @@ SRCS_CLIENT = \
 SRCS_SERVER = \
 	server.c \
 
+OBJS_COMMON = $(SRCS_COMMON:.c=.o)
 OBJS_CLIENT = $(SRCS_CLIENT:.c=.o)
 OBJS_SERVER = $(SRCS_SERVER:.c=.o)
 
-OBJS = $(OBJS_CLIENT) $(OBJS_SERVER)
+OBJS = $(OBJS_COMMON) $(OBJS_CLIENT) $(OBJS_SERVER)
 DEPS = $(OBJS:.o=.d)
 
 CFLAGS = -Wall -Wextra
@@ -26,10 +30,10 @@ CFLAGS += -g -fsanitize=address
 
 all: $(TARGET)
 
-$(CLIENT): $(OBJS_CLIENT)
+$(CLIENT): $(OBJS_COMMON) $(OBJS_CLIENT)
 	$(CC) $(CFLAGS) -o $@ $^
 
-$(SERVER): $(OBJS_SERVER)
+$(SERVER): $(OBJS_COMMON) $(OBJS_SERVER)
 	$(CC) $(CFLAGS) -o $@ $^
 
 %.o: %.c
